security+perf: token blacklist to DB, WebSocket auth, Spring Cache, secure test endpoints
Security:
- Migrate token blacklist from in-memory ConcurrentHashMap to PostgreSQL
  (tokens survive Render restarts, SHA-256 hashed storage)
- Add WebSocket subscription authorization: users can only subscribe to
  their own chat/notification channels, validates therapeutic relationship
- Secure /api/tests/** endpoints: now require authentication (was permitAll)

Performance:
- Add Caffeine-backed Spring Cache for test queries (15min TTL) and
  admin statistics (5min TTL)
- Add @CacheEvict on test create/update/delete/import operations

New files:
- TokenBlacklistEntity + TokenBlacklistRepository
- V68 migration: token_blacklist table

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>